--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-leaflet": "^3.0.5",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
